Kubernetes/app.deployment.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: app-deployment
  labels:
    app: app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app
        image: container-registry/app:latest
        ports:
          - containerPort: 4200
