Kubernetes/app.service.yaml
kind: Service
apiVersion: v1
metadata:
  name: app-service
  labels:
    app: app
spec:
  type: ClusterIP
  selector:
    app: app
  ports:
  - name: http
    port: 80
    targetPort: 4200
