Kubernetes/app.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: app
  labels:
    app: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app
        image: ajobanpu.azurecr.io/app:latest
---
kind: Service
apiVersion: v1
metadata:
  name: app
  labels:
    app: app
spec:
  type: LoadBalancer
  selector:
    app: app
  ports:
  - port: 80
    targetPort: 4200
