Kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: k8-cluster-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: app-service
          servicePort: 80
      - path: /login-api
        backend:
          serviceName: login-service-service
          servicePort: 80
